Align seats and space type; fix SPOT-961. Hide Seats on spaces that should have no capacity; fix SPOT-956

--- a/static/css/desktop.less
+++ b/static/css/desktop.less
@@ -228,7 +228,7 @@
 					.computer-notavailable {color: #b42020;}
                 	p {margin:0; margin-top:17px;}
                 	}
-                    .space-detail-type-label { width: 55%; }
+                    .space-detail-type-label { width: 55%; line-height: 20px; }
                 }
                 button:focus { outline: grey dashed thin; }
                 button div { padding: 0 2px; }
