--- a/static/css/mobile.less
+++ b/static/css/mobile.less
@@ -375,7 +375,7 @@ button {
                 	}
 
                     .space-detail-capacity { color: @grey_light; font-size: 12px; display: inline-block; }
-                    .space-detail-type-label { color: @grey_light; display: inline-block; width: 55%; .wrap; line-height: 14px; font-size:12px;}
+                    .space-detail-type-label { color: @grey_light; display: inline-block; width: 55%; .wrap; line-height: 20px; font-size:12px;}
                     .space-detail-type { color: @grey_dark;  }
                     .space-detail-name { font-size: 17px; line-height: 20px; padding-top: 2px; .wrap; color: #000; }
                     .space-detail-desc { .nowrap; color: #000; }
